--- a/app/views/layouts/nav/_header.html.erb
+++ b/app/views/layouts/nav/_header.html.erb
@@ -35,6 +35,7 @@
       <% if account_signed_in? %>
       <p>
       <%= link_to "Sign Out", destroy_account_session_path, method: :delete, class: "btn btn-danger my-2 text-white" %>
+      <%= link_to "Dashboard", dashboard_path, class: "btn btn-info my-2 text-white" %>
 
       </p>
       <% else %>
